--- a/Inmobiliaria/Inmobiliaria.csproj
+++ b/Inmobiliaria/Inmobiliaria.csproj
@@ -31,4 +31,10 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Data\InmobiliariaDB.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
